hphp/test/zend/bad/ext/standard/tests/general_functions/bug60227_4.php
<?php
header("X-foo: e\r\n foo");
header("X-foo: e\r\nfoo");
echo 'foo';
?>